--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="intro">
             <img src="assets/images/Tristana.jpg" alt="Tristana">
 
-            <p> Welcome to hangman....League of Legends edition.  Guess all the letters correctly to win.  
+            <p id="directions-text"> Welcome to hangman....League of Legends edition.  Guess all the letters in the word correctly to win.  
                 Answer incorrect 10 times and you lose.  Press any key to get started.
             </p>
         </div>
