--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body onload = gameStart()>
     
     <header>
         <h1>Hangman</h1>
@@ -25,8 +25,11 @@
             </p>
         </div>
 
-        <div class="correctGuesses"></div>
-        <div class="incorrectGuesses"></div>
+        <p id="correctGuesses"></p>
+        <p id="guessesLeft"></p>
+        <p id="incorrectGuesses"></p>
+        <p id="wins"></p>
+        <p id="losses"></p>
 
 
 
